--- a/Project_Website/index.html
+++ b/Project_Website/index.html
@@ -1,1 +1,185 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+    <meta name="description" content="Mukesh Patel School of Technology Management and Engineering - Design Build Fly Team" />
+    <title>Design Build Fly | Mukesh Patel School of Technology Management and Engineering</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- Navigation -->
+    <header>
+        <div class="container nav-container">
+            <div class="logo">
+                <img src="images/logo.png" alt="Team Logo">
+            </div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#home" class="active">Home</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#timeline">Timeline</a></li>
+                    <li><a href="#team">Our Team</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="menu-toggle" id="mobile-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
+    </header>
 
+    <!-- Home Section -->
+    <section class="hero" id="home">
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
+            <h1 class="hero-title animate-fade-in">Design Build Fly Team</h1>
+            <p class="hero-subtitle animate-slide-up">Mukesh Patel School of Technology Management and Engineering</p>
+            <a href="#about" class="btn btn-primary animate-pop-in">Learn More</a>
+        </div>
+    </section>
+    <!-- About Section -->
+    <section class="about section-padding" id="about">
+        <div class="container">
+            <h2 class="section-title">About Us</h2>
+            <p class="section-subtitle">Building the future of aerospace, one prototype at a time.</p>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>
+                        The Design Build Fly team at Mukesh Patel School of Technology Management and Engineering is dedicated 
+                        to advancing aerospace education through hands-on experience. Our members are passionate innovators 
+                        and engineers-in-training who design and construct unique aircraft for international competitions. 
+                        Our work blends technology, creativity, and collaboration, striving to achieve excellence and inspire 
+                        the next generation of aerospace pioneers.
+                    </p>
+                </div>
+                <div class="about-image">
+                    <img src="images/hero-bg.jpg" alt="Aircraft Model">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Timeline Section -->
+    <section class="timeline section-padding" id="timeline">
+        <div class="container">
+            <h2 class="section-title">Our Journey</h2>
+            <p class="section-subtitle">Milestones that shaped our path in 2024.</p>
+            <div class="timeline-container">
+                <!-- Event 1 -->
+                <div class="timeline-item">
+                    <div class="timeline-date">21 July 2024</div>
+                    <div class="timeline-content">
+                        <h3>Team Formation</h3>
+                        <p>A group of dedicated students came together, laying the foundation for our Design Build Fly initiative. This day marked the beginning of our pursuit to create innovative aerial solutions.</p>
+                    </div>
+                </div>
+                <!-- Event 2 -->
+                <div class="timeline-item">
+                    <div class="timeline-date">29 October 2024</div>
+                    <div class="timeline-content">
+                        <h3>Proposal Submission</h3>
+                        <p>After weeks of ideation and refinement, we submitted our official project proposal to the international DBF competition, outlining our aircraft design concepts and strategies.</p>
+                    </div>
+                </div>
+                <!-- Event 3 -->
+                <div class="timeline-item">
+                    <div class="timeline-date">22 November 2024</div>
+                    <div class="timeline-content">
+                        <h3>Proposal Results</h3>
+                        <p>Our proposal results arrived, placing us 27th globally, 3rd in Asia, and 1st in India. This recognition fueled our determination to push even harder towards our goals.</p>
+                    </div>
+                </div>
+                <!-- Event 4 -->
+                <div class="timeline-item">
+                    <div class="timeline-date">14 December 2024</div>
+                    <div class="timeline-content">
+                        <h3>Airframe Construction Begins</h3>
+                        <p>With the groundwork set, we moved from theory to action. Our team started the manual construction of the aircraft’s airframe, turning our designs into a tangible reality.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Team Section -->
+    <section class="team section-padding" id="team">
+        <div class="container">
+            <h2 class="section-title">Meet Our Team</h2>
+            <p class="section-subtitle">A group of passionate students and innovators driving our vision forward.</p>
+            <div class="team-grid">
+                <!-- Adjust image paths as needed. Currently using placeholder images. -->
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Zarvan Movdawalla">
+                    <h3>Zarvan Movdawalla</h3>
+                    <p>Team Captain & Project Lead</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member2.jpg" alt="Mithil Gogri">
+                    <h3>Mithil Gogri</h3>
+                    <p>Aerodynamics Specialist</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Agastya Hukoo">
+                    <h3>Agastya Hukoo</h3>
+                    <p>Structures Engineer</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member2.jpg" alt="Gyaan Jhunjhunwala">
+                    <h3>Gyaan Jhunjhunwala</h3>
+                    <p>Avionics & Electronics</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Priya Shah">
+                    <h3>Priya Shah</h3>
+                    <p>Propulsion Specialist</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member2.jpg" alt="Karan Jain">
+                    <h3>Karan Jain</h3>
+                    <p>Materials Engineer</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Riya Mehta">
+                    <h3>Riya Mehta</h3>
+                    <p>Safety Officer</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member2.jpg" alt="Aarav Patel">
+                    <h3>Aarav Patel</h3>
+                    <p>Flight Testing Lead</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Neha Singh">
+                    <h3>Neha Singh</h3>
+                    <p>Communications Coordinator</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contact Section -->
+    <section class="contact section-padding" id="contact">
+        <div class="container">
+            <h2 class="section-title">Get in Touch</h2>
+            <p class="section-subtitle">We’d love to hear from you. Reach out with your questions or collaborations.</p>
+            <form class="contact-form">
+                <div class="form-row">
+                    <input type="text" placeholder="Name" required>
+                    <input type="email" placeholder="Email" required>
+                </div>
+                <textarea placeholder="Message" required></textarea>
+                <button type="submit" class="btn btn-primary">Send Message</button>
+            </form>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer>
+        <div class="container footer-content">
+            <p>&copy; 2024 Mukesh Patel School of Technology Management and Engineering - Design Build Fly Team</p>
+        </div>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
